consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: consumer
  namespace: ingress-nginx
spec:
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      labels:
        app: consumer
    spec:
      containers:
        - name: consumer
          image: tonehmorris/rabbitmq-golang-demo:consumer
          imagePullPolicy: "Always"
          ports:
            - containerPort: 9090
          resources: {}

      restartPolicy: Always

status: {}
