consumer-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: consumer
  name: consumer
spec:
  type: ClusterIP
  ports:
    - name: "9090"
      port: 9090
      targetPort: 9090
  selector:
    io.kompose.service: consumer
status: {}
